Add log, random, datetime, hashmap, utilities

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -19,4 +19,5 @@ encoding//src/ExerciseRightTraingle.java=UTF-8
 encoding//src/ExerciseStartIndexChar.java=UTF-8
 encoding//src/ExerciseValidateString.java=UTF-8
 encoding//src/HashMapReadFile.java=UTF-8
+encoding//src/Random/RandomCharacter.java=UTF-8
 encoding//src/UnsecuredLoan.java=UTF-8
